--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
 <body class="dark-mode">
+  <div class="overlay"></div>
   <header>
     <nav class="navbar">
       <div class="logo">S<span>h</span>i<span>v</span>i</div>
